--- a/webstuff.css
+++ b/webstuff.css
@@ -19,39 +19,22 @@ body, html{
 } 
 
 .imageclass2 {
-    grid-column: 1 / 2;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding-left: 30%;
 }
 
 .basicinfo2 {
-    grid-column: 2 / 3;
+    display: flex;
+    align-items: center;
     text-align: center;
     align-items: center;
-}
-
-/* .basicinfo2 h1 {
-    max-width: 100%;
-    margin: auto;
-    display: flex;
-    position: absolute;
-    top: 5%;
-    right: 19%;
-    margin-bottom: 20px;
-    padding-bottom: 20%;
-}
-
-.basicinfo2 p {
-    margin: auto;
     flex-direction: column;
-    padding-top: 2%;
-    position: absolute;
-    align-items: center;
-    top: 12%;
-    right: 17%;
-    line-height: 0.25;
-    color: #AAB7B8;
-    padding-bottom: 20%;
-    display: flex;
-} */
+    justify-content: center;
+    margin-left: 10%;
+}
+
 
 .basicinfo2 p {
     text-align: center;
@@ -177,6 +160,7 @@ ul li a:hover {
 .section {
     font-size: 18px;
     display: flex;
+    row-gap: 4px;
     text-align: center;
     flex-direction: column;
     z-index: 1;
@@ -185,16 +169,24 @@ ul li a:hover {
 }
 
 .pagehead {
-    margin: auto;
-    width: 100%;
+    /* margin: auto; */
+    max-width: 1200px;
     text-align: center;
-    display: grid;
-    /* align-items: center; */
-    flex-direction: column;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: row;
+    margin-left: 1%;
     /* width: 100%; */
-    z-index: 1;
+    /* z-index: 1;
     position: relative;
-    flex: 1;
+    flex: 1; */
+}
+
+.topinfo {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
 }
 
 .imageclass {
@@ -275,19 +267,15 @@ ul li a:hover {
 }
 
 .socials {
-    align-items: center;
-    margin-top: -4%;
-    padding-top: -15%;
     display: flex;
+    padding-top: 10%;
     align-items: center;
-    padding-left: 50%;
     /* right: -40%; */
-    z-index: 2;
     column-gap: 40px;
 }
 
 .socials a {
-    display: inline-block;
+    display: flex;
     /* padding: 10px; */
     border-radius: 50%;
 }
@@ -422,14 +410,14 @@ figcaption {
     display: flex;
     flex-direction: column;
     flex: 1;
-    text-align: left;
+    text-align: center;
     align-items: center;
     justify-content: center;
     /* margin-bottom: 100px; */
 }
 
 .coursedescr p {
-    text-align: left;
+    text-align: center;
 }
 
 .coursedescr p {
