--- a/webstuff.css
+++ b/webstuff.css
@@ -18,6 +18,15 @@ body, html{
     background-color: #e8f0f7;
 } 
 
+.subtitles {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: cetner;
+    row-gap: 5px;
+    padding-bottom: 9%;
+}
+
 .imageclass2 {
     display: flex;
     align-items: center;
@@ -302,7 +311,6 @@ ul li a:hover {
 
 .socials a {
     display: flex;
-    /* padding: 10px; */
     border-radius: 50%;
 }
 
