--- a/webstuff.css
+++ b/webstuff.css
@@ -7,7 +7,8 @@ p {
 }
 
 body, html{ 
-	width:100vw; 
+    width: 100%;
+	/* width:100vw;  */
 	margin:0;
     height: 100vh; 
     position: relative;
