--- a/webstuff.css
+++ b/webstuff.css
@@ -303,6 +303,7 @@ body, html{
     justify-content: center;
     align-items: center;
     min-height: 120px;
+    padding: 3%;
 }
 
 .footer__content {
