changing descriptions and updating syllabus

--- a/webstuff.css
+++ b/webstuff.css
@@ -249,8 +249,9 @@ body, html{
 
 .image3 {
     width: 500px;
-    border-radius: 2%;
+    border-radius: 3%;
     margin-right: 2%;
+    padding-left: 4%;
 }
 
 /* end */
