--- a/webstuff.css
+++ b/webstuff.css
@@ -339,6 +339,7 @@ body, html{
     margin-bottom: 5%;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .header__content {
@@ -346,24 +347,11 @@ body, html{
     align-items: center;
     justify-content: space-between;
     min-height: 120px;
-    width: 1400px;
+    /* width: 1400px; */
+    width: 100%;
     margin: 0 auto;
     flex-direction: row;
     column-gap: 200px;
-}
-
-.header {
-    background-color: black;
-    margin-bottom: 5%;
-}
-
-.header__content {
-    display: flex; 
-    align-items: center;
-    justify-content: center;
-    min-height: 120px;
-    max-width: 1400px;
-    margin: 0 auto;
 }
 
 .contact-info {
