--- a/webstuff.css
+++ b/webstuff.css
@@ -6,6 +6,14 @@ p {
     margin-bottom: 0;
 }
 
+code {
+    background-color: #f0f0f0;
+    padding: 2px 4px;
+    border-radius: 4px;
+    font-family: monospace;
+    color: #2980b9;
+}
+
 body, html{ 
     display: flex;
     align-items: center;
