--- a/webstuff.css
+++ b/webstuff.css
@@ -1,5 +1,4 @@
 /* general */
-
 p {
     font-family: prompt;
     margin-top: 0;
@@ -14,17 +13,17 @@ code {
     color: #2980b9;
 }
 
-body, html{ 
+body, html { 
     display: flex;
     align-items: center;
     flex-direction: column;
     width: 100%;
-	/* width:100vw;  */
-	margin:0;
-    height: 100vh; 
+    margin: 0;
+    height: auto; 
     position: relative;
     background-color: #e8f0f7;
-} 
+    overflow-x: hidden;
+}
 
 * {
     margin: 0;
@@ -52,23 +51,19 @@ body, html{
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: cetner;
+    justify-content: center;
     row-gap: 5px;
     padding-bottom: 9%;
 }
-
-/* name, affiliation, etc. */
 
 .basicinfo2 {
     display: flex;
     align-items: center;
     text-align: center;
-    align-items: center;
     flex-direction: column;
     justify-content: center;
     margin-left: 10%;
 }
-
 
 .basicinfo2 p {
     text-align: center;
@@ -85,12 +80,6 @@ body, html{
     padding-bottom: 50%;
 }
 
-/* .intro {
-    width: 500px;
-} */
-
-/* Embedding CV */
-
 .cv {
     display: flex;
     align-items: center;
@@ -98,13 +87,12 @@ body, html{
     padding-bottom: 3%;
 }
 
-/* NAV BAR STUFF */
-
 .header {
     background-color: black;
     margin-bottom: 5%;
     justify-content: center;
     align-items: center;
+    width: 100%;
 }
 
 .header__content {
@@ -112,7 +100,7 @@ body, html{
     align-items: center;
     justify-content: space-between;
     min-height: 120px;
-    max-width: 100%;
+    width: 100%;
     margin: 0 auto;
     flex-direction: row;
     column-gap: 200px;
@@ -163,8 +151,6 @@ body, html{
     margin-left: 20px;
 }
 
-/* navbar sections - used in index.html */
-
 .section {
     font-size: 18px;
     display: flex;
@@ -179,19 +165,10 @@ body, html{
     padding-left: 10px;
 }
 
-.section p{
+.section p {
     margin-bottom: 3%;
 }
 
-.section h1 {
-    
-}
-
-.section h3 {
-    padding-bottom: 2%;
-}
-
-/* basic info stuff, used in index.html */
 .pagehead {
     max-width: 1200px;
     text-align: center;
@@ -202,7 +179,6 @@ body, html{
     margin-left: 1%;
 }
 
-/* these are ones I can't find, not sure where I used them, revisit later */
 .topinfo {
     display: flex;
     align-items: center;
@@ -223,7 +199,6 @@ body, html{
     position: absolute;
     top: 5%;
     right: 19%;
-    /* margin-bottom: 20px; */
     padding-bottom: 20%;
 }
 
@@ -252,15 +227,6 @@ body, html{
     display: flex;
 }
 
-.text {
-    flex: 1;
-}
-
-.image2 {
-    width: 400px;
-    margin-left: 20px;
-}
-
 .image3 {
     width: 500px;
     border-radius: 3%;
@@ -268,33 +234,24 @@ body, html{
     padding-left: 4%;
 }
 
-/* end */
-
-/* used for images throughout website */
 .image {
     width: 300px; 
     margin: auto;
 }
 
-
-/* basic text box, used in index.html and projects.html */
 .txt-cont {
     display: flex;
     align-items: center;
 }
 
-.net-vis{
+.net-vis {
     display: flex;
     align-items: center;
 }
 
-/* Used to wrap text around image - a little hacky, let's try to change that */
-
 .bottom-text {
     margin-top: 20px;
 }
-
-/* social media info, used throughout especially in header.html and footer.html */
 
 .socials {
     display: flex;
@@ -316,8 +273,6 @@ body, html{
     width: 300px;
 }
 
-/* footer content */
-
 .footer {
     background-color: black;
     margin-bottom: 5%;
@@ -330,38 +285,13 @@ body, html{
 
 .footer__content {
     display: flex;
-    background-color:black;
+    background-color: black;
     max-height: 100px;
     max-width: 1200px;
     align-items: center;
     justify-content: center;
     column-gap: 40px;
-    margin-top: -1%;
-    margin-left: 400px;
-    margin-right: 400px;
-    /* min-width: 1200px; */
-}
-
-/* header content */
-
-.header {
-    background-color: black;
-    margin-bottom: 5%;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-}
-
-.header__content {
-    display: flex; 
-    align-items: center;
-    justify-content: space-between;
-    min-height: 120px;
-    /* width: 1400px; */
-    width: 100%;
-    margin: 0 auto;
-    flex-direction: row;
-    column-gap: 200px;
+    margin: auto;
 }
 
 .contact-info {
@@ -371,8 +301,7 @@ body, html{
     align-items: center;
     justify-content: center;
     max-width: 1200px;
-    margin-left: 45px;
-    margin-right: 50px;
+    margin: auto;
     column-gap: 200px;
 }
 
@@ -382,7 +311,6 @@ body, html{
     text-align: center;
 }
 
-/* div for projects in project.html */
 .project {
     text-align: center;
 }
@@ -407,7 +335,6 @@ body, html{
     color: black;
 }
 
-/* not sure if I need this one since .imagecap does the job */
 figcaption {
     background-color: inherit;
     color: inherit;
@@ -415,7 +342,7 @@ figcaption {
     font-style: italic;
     padding: 2px;
     text-align: center;
-  }
+}
 
 .imagecap {
     display: flex;
@@ -425,13 +352,10 @@ figcaption {
     padding-bottom: 2px;
 }
 
-/* course info, used in index.html */
-
 .course {
     display: flex;
     position: relative;
     padding: 20px;
-    /* flex: 1; */
     background-color: rgb(224, 233, 236);
 }
 
@@ -445,12 +369,6 @@ figcaption {
     background-color: #2980b9;
 }
 
-.courseinfo {
-    flex: 1;
-    display: flex;
-    flex-direction: column;
-}
-
 .coursename {
     text-align: left;
     font-weight: bold;
@@ -460,33 +378,12 @@ figcaption {
     padding: 50px;
 }
 
-.coursename::before {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 0;
-    width: 1%;
-    height: 100%;
-    background-color: #2980b9;
-}
-
-.coursename::after {
-    content: "";
-    position: absolute;
-    bottom: 0;
-    left: 45%;
-    width: 1px;
-    height: 100%;
-    background-color: #2980b9;
-}
-
 .coursename h2 {
     font-weight: bolder;
     font-size: 30px;
     width: 50%;
     margin-left: 10%;
 }
-
 
 .coursesem {
     margin-top: -3%;
@@ -505,23 +402,11 @@ figcaption {
     text-align: center;
     align-items: center;
     justify-content: center;
-    /* margin-bottom: 100px; */
-}
-
-.coursedescr p {
-    text-align: center;
 }
 
 .coursedescr p {
     margin-bottom: 10px;
 }
-
-.coursedescr div{
-    margin-bottom: 10px;
-}
-
-
-/* Tutorial Setup */
 
 .tutorial {
     display: flex;
@@ -530,10 +415,6 @@ figcaption {
     flex-direction: column;
     row-gap: 15px;
     font-size: 15pt;
-}
-
-.tutorial h2 {
-    margin-bottom: 15px;
 }
 
 .tut__header {
@@ -563,9 +444,3 @@ figcaption {
 .tut__links {
     display: flex;
     flex-direction: row;
-    text-align: center;
-    align-items: center;
-    margin-top: 10px;
-    column-gap: 30%;
-    text-decoration: none;
-}
