--- a/webstuff.css
+++ b/webstuff.css
@@ -353,20 +353,35 @@ figcaption {
 }
 
 .course {
-    display: flex;
-    position: relative;
-    padding: 20px;
+    display: flex; 
+    flex-wrap: wrap; 
+    border-bottom: 1px solid #2980b9; 
+    margin-bottom: 1%;
+    padding-bottom: 1%;
     background-color: rgb(224, 233, 236);
+    padding-right: 5%;
+    padding-top: 5%;
+    border-left: 10px solid #2980b9;
 }
 
-.course::after {
+/* .course::after {
     content: "";
     position: absolute;
     bottom: 0;
     left: 0;
     width: 100%;
-    height: 1px;
+    height: 5px;
     background-color: #2980b9;
+} */
+
+.courseinfo {
+    flex: 1; 
+    min-width: 250px; 
+    padding-right: 15px;
+    box-sizing: border-box;
+    display: flex;
+    flex-direction: column;
+    border-right: 1px solid #2980b9;
 }
 
 .coursename {
@@ -378,11 +393,35 @@ figcaption {
     padding: 50px;
 }
 
+/* .coursename::before {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    width: 1%;
+    height: 100%;
+    background-color: #2980b9;
+} */
+
+/* .coursename::after {
+    content: "";
+    position: absolute;
+    bottom: 0;
+    left: 45%;
+    width: 1px;
+    height: 100%;
+    background-color: #2980b9;
+} */
+
 .coursename h2 {
     font-weight: bolder;
     font-size: 30px;
     width: 50%;
     margin-left: 10%;
+}
+
+.section h1{
+    padding-bottom: 3%;
 }
 
 .coursesem {
@@ -406,6 +445,7 @@ figcaption {
 
 .coursedescr p {
     margin-bottom: 10px;
+    padding-left: 5%;
 }
 
 .tutorial {
